--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,41 +1,47 @@
-.new-post{
-    padding:16px 0;
+.new-post {
+    padding: 16px 0;
     border-bottom: 1px solid #ccc;
 }
 
 .new-post header,
-.posts header{
+.posts header {
     margin-bottom: 20px;
 }
 
-.posts .post{
+.posts .post {
     padding-left: 10px;
     border-left: 3px solid #a21b24;
     margin-bottom: 30px;
 }
 
-.posts .post .info{
+.posts .post .info {
     color: #aaa;
     font-style: italic;
 }
 
-.error, .success{
+.error, .success {
     text-align: center;
 }
 
-.error{
-    border:1px solid red;
-    background-color: #f9b5af ;
+.error {
+    border: 1px solid red;
+    background-color: #f9b5af;
     color: red;
 }
-.error ul{
+
+.error ul {
     list-style: none;
     margin: 0px;
     padding: 0px;
 }
 
-.success{
-    border:1px solid green;
-    background-color: #d1f9da ;
+.TransactionTable {
+    align-items: center;
+    margin-left: -455px
+}
+
+.success {
+    border: 1px solid green;
+    background-color: #d1f9da;
     color: green;
 }
